--- a/clusters/my-cluster/apps/wordpress/wordpress.yaml
+++ b/clusters/my-cluster/apps/wordpress/wordpress.yaml
@@ -10,7 +10,7 @@ metadata:
   namespace: kube-system
 spec:
   interval: 1m0s
-  url: https://bitnami-labs.github.io/sealed-secrets
+  url: https://bitnami-labs.github.io/wordpress
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
