--- a/clusters/my-cluster/apps/wordpress/wordpress.yaml
+++ b/clusters/my-cluster/apps/wordpress/wordpress.yaml
@@ -3,15 +3,6 @@ kind: Namespace
 metadata:
   name: wordpress
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
-metadata:
-  name: wordpress
-  namespace: kube-system
-spec:
-  interval: 1m0s
-  url: https://bitnami-labs.github.io/wordpress
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -24,7 +15,7 @@ spec:
       version: "6.2.2"
       sourceRef:
         kind: HelmRepository
-        name: wordpress
+        name: bitnami
   interval: 1m0s
   values:
     existingSecret: wordpress
