--- a/clusters/my-cluster/apps/wordpress/wordpress.yaml
+++ b/clusters/my-cluster/apps/wordpress/wordpress.yaml
@@ -2,6 +2,18 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: wordpress
+
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: wordpress
+  namespace: wordpress
+spec:
+  interval: 1m0s
+  url: oci://registry-1.docker.io/bitnamicharts/wordpress
+  ref:
+    tag: latest
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
@@ -15,7 +27,7 @@ spec:
       version: "6.2.2"
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: wordpress
   interval: 1m0s
   values:
     existingSecret: wordpress
