--- a/clusters/my-cluster/common/bitnami.yml
+++ b/clusters/my-cluster/common/bitnami.yml
@@ -7,3 +7,13 @@ metadata:
 spec:
   interval: 1m0s
   url: https://bitnami-labs.github.io/
+
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: GitRepository
+metadata:
+  name: bitnami
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  url: https://github.com/bitnami/charts
