--- a/clusters/my-cluster/apps/wordpress/wordpress.yaml
+++ b/clusters/my-cluster/apps/wordpress/wordpress.yaml
@@ -4,17 +4,6 @@ metadata:
   name: wordpress
 
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: OCIRepository
-metadata:
-  name: wordpress
-  namespace: wordpress
-spec:
-  interval: 1m0s
-  url: oci://registry-1.docker.io/bitnamicharts/wordpress
-  ref:
-    tag: latest
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -26,8 +15,8 @@ spec:
       chart: wordpress
       version: "6.2.2"
       sourceRef:
-        kind: HelmRepository
-        name: wordpress
+        kind: GitRepository
+        name: bitnami
   interval: 1m0s
   values:
     existingSecret: wordpress
