--- a/clusters/my-cluster/common/bitnami.yml
+++ b/clusters/my-cluster/common/bitnami.yml
@@ -3,19 +3,17 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: bitnami
-  namespace: kube-system
-spec:
-  interval: 1m0s
-  url: https://bitnami-labs.github.io/
-
----
-apiVersion: source.toolkit.fluxcd.io/v1beta1
-kind: GitRepository
-metadata:
-  name: bitnami
   namespace: flux-system
 spec:
-  interval: 1m0s
-  ref:
-    branch: main
-  url: https://github.com/bitnami/charts
+  interval: 1m
+  url: https://charts.bitnami.com/bitnami
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: bitnami-oci
+  namespace: flux-system
+spec:
+  interval: 1m
+  url: oci://registry-1.docker.io/bitnamicharts/
+  type: oci
