--- a/clusters/my-cluster/kube-system/external-dns.yaml
+++ b/clusters/my-cluster/kube-system/external-dns.yaml
@@ -11,6 +11,6 @@ spec:
       # version: "2.1.8"
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: bitnami-oci
   interval: 1m0s
   # values:
