--- a/clusters/my-cluster/common/bitnami.yml
+++ b/clusters/my-cluster/common/bitnami.yml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: bitnami
-  namespace: flux-system
+  namespace: kube-system
 spec:
   interval: 1m
   url: https://charts.bitnami.com/bitnami
@@ -12,7 +12,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: bitnami-oci
-  namespace: flux-system
+  namespace: kube-system
 spec:
   interval: 1m
   url: oci://registry-1.docker.io/bitnamicharts/
