--- a/clusters/my-cluster/kube-system/external-dns.yaml
+++ b/clusters/my-cluster/kube-system/external-dns.yaml
@@ -14,4 +14,5 @@ spec:
         name: bitnami-oci
   interval: 1m0s
   targetNamespace: kube-system
-  # values:
+  values:
+    fullnameOverride: external-dns
