add heztner provide external-dns

--- a/clusters/my-cluster/kube-system/external-dns.yaml
+++ b/clusters/my-cluster/kube-system/external-dns.yaml
@@ -16,3 +16,6 @@ spec:
   targetNamespace: kube-system
   values:
     fullnameOverride: external-dns
+    provider: hetzner
+    hetzner:
+      secretName: hetzner
