--- a/clusters/my-cluster/kube-system/external-dns.yaml
+++ b/clusters/my-cluster/kube-system/external-dns.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: external-dns
-      # version: "2.1.8"
+      version: "6.2.0"
       sourceRef:
         kind: HelmRepository
         name: bitnami-oci
@@ -16,6 +16,7 @@ spec:
   targetNamespace: kube-system
   values:
     fullnameOverride: external-dns
-    provider: hetzner
+    # provider: hetzner
     hetzner:
       secretName: hetzner
+#vakamai,alibabacloud,aws,aws-sd,azure,azure-dns,azure-private-dns,bluecat,civo,cloudflare,coredns,designate,digitalocean,dnsimple,dyn,exoscale,gandi,godaddy,google,ibmcloud,infoblox,inmemory,linode,ns1,oci,ovh,pdns,pihole,plural,rcodezero,rdns,rfc2136,safedns,scaleway,skydns,tencentcloud,transip,ultradns,vinyldns,vultr, got '
