--- a/clusters/my-cluster/kube-system/external-dns.yaml
+++ b/clusters/my-cluster/kube-system/external-dns.yaml
@@ -1,22 +1,22 @@
-# ---
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: external-dns
-#   namespace: kube-system
-# spec:
-#   chart:
-#     spec:
-#       chart: external-dns
-#       version: "6.2.0"
-#       sourceRef:
-#         kind: HelmRepository
-#         name: bitnami-oci
-#   interval: 1m0s
-#   targetNamespace: kube-system
-#   values:
-#     fullnameOverride: external-dns
-#     # provider: hetzner
-#     hetzner:
-#       secretName: hetzner
-# #vakamai,alibabacloud,aws,aws-sd,azure,azure-dns,azure-private-dns,bluecat,civo,cloudflare,coredns,designate,digitalocean,dnsimple,dyn,exoscale,gandi,godaddy,google,ibmcloud,infoblox,inmemory,linode,ns1,oci,ovh,pdns,pihole,plural,rcodezero,rdns,rfc2136,safedns,scaleway,skydns,tencentcloud,transip,ultradns,vinyldns,vultr, got '
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: external-dns
+  namespace: kube-system
+spec:
+  chart:
+    spec:
+      chart: external-dns
+      version: "6.2.0"
+      sourceRef:
+        kind: HelmRepository
+        name: bitnami-oci
+  interval: 1m0s
+  targetNamespace: kube-system
+  values:
+    fullnameOverride: external-dns
+    provider: hetzner
+    hetzner:
+      secretName: hetzner
+#vakamai,alibabacloud,aws,aws-sd,azure,azure-dns,azure-private-dns,bluecat,civo,cloudflare,coredns,designate,digitalocean,dnsimple,dyn,exoscale,gandi,godaddy,google,ibmcloud,infoblox,inmemory,linode,ns1,oci,ovh,pdns,pihole,plural,rcodezero,rdns,rfc2136,safedns,scaleway,skydns,tencentcloud,transip,ultradns,vinyldns,vultr, got '
