--- a/clusters/my-cluster/kube-system/external-dns.yaml
+++ b/clusters/my-cluster/kube-system/external-dns.yaml
@@ -11,7 +11,7 @@ spec:
       version: "6.2.0"
       sourceRef:
         kind: HelmRepository
-        name: bitnami-oci
+        name: bitnami
   interval: 1m0s
   targetNamespace: kube-system
   values:
