--- a/clusters/my-cluster/apps/podinfo/source-podinfo.yaml
+++ b/clusters/my-cluster/apps/podinfo/source-podinfo.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: podinfo
-  namespace: kube-system
+  namespace: podinfo
 spec:
   interval: 1m0s
   url: https://stefanprodan.github.io/podinfo
