--- a/clusters/my-cluster/apps/podinfo/source-podinfo.yaml
+++ b/clusters/my-cluster/apps/podinfo/source-podinfo.yaml
@@ -1,9 +1,9 @@
----
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
-metadata:
-  name: podinfo
-  namespace: podinfo
-spec:
-  interval: 1m0s
-  url: https://stefanprodan.github.io/podinfo
+# ---
+# apiVersion: source.toolkit.fluxcd.io/v1beta2
+# kind: HelmRepository
+# metadata:
+#   name: podinfo
+#   namespace: podinfo
+# spec:
+#   interval: 1m0s
+#   url: https://stefanprodan.github.io/podinfo
