--- a/clusters/my-cluster/apps/podinfo/helmrelease-podinfo.yaml
+++ b/clusters/my-cluster/apps/podinfo/helmrelease-podinfo.yaml
@@ -23,3 +23,15 @@ spec:
       requests:
         cpu: 100m
         memory: 64Mi
+    ingress:
+      enabled: true
+      className: nginx
+      annotations:
+        {}
+        # kubernetes.io/ingress.class: nginx
+        # kubernetes.io/tls-acme: "true"
+      hosts:
+        - host: podinfo.rbl.wtf
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
