--- a/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
+++ b/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
@@ -18,8 +18,19 @@ spec:
   values:
     replicaCount: 2
     resources:
+      annotations:
+        cert-manager.io/issuer: "letsencrypt-prod"
       limits:
         memory: 256Mi
       requests:
         cpu: 100m
         memory: 64Mi
+      hosts:
+        - host: podinfo.rbl.wtf
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
+      tls:
+        - secretName: letsencrypt-podinfo
+          hosts:
+            - podinfo.rbl.wtf
