--- a/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
+++ b/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
@@ -25,12 +25,12 @@ spec:
       requests:
         cpu: 100m
         memory: 64Mi
-      hosts:
-        - host: test.rbl.wtf
-          paths:
-            - path: /
-              pathType: ImplementationSpecific
-      # tls:
-      #   - secretName: letsencrypt-podinfo-test
-      #     hosts:
-      #       - test.rbl.wtf
+    hosts:
+      - host: test.rbl.wtf
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls:
+      - secretName: letsencrypt-podinfo-test
+        hosts:
+          - test.rbl.wtf
