--- a/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
+++ b/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
@@ -30,7 +30,7 @@ spec:
         paths:
           - path: /
             pathType: ImplementationSpecific
-    tls:
-      - secretName: letsencrypt-podinfo-test
-        hosts:
-          - test.rbl.wtf
+    # tls:
+    #   - secretName: letsencrypt-podinfo-test
+    #     hosts:
+    #       - test.rbl.wtf
