--- a/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
+++ b/clusters/hetzner-test/apps/podinfo/helmrelease-podinfo.yaml
@@ -20,6 +20,7 @@ spec:
     resources:
       annotations:
         cert-manager.io/issuer: "letsencrypt-prod"
+        kubernetes.io/tls-acme: "true"
       limits:
         memory: 256Mi
       requests:
