--- a/clusters/hetzner-test/apps/podinfo/letsencrypt-prod.yaml
+++ b/clusters/hetzner-test/apps/podinfo/letsencrypt-prod.yaml
@@ -1,8 +1,8 @@
 apiVersion: cert-manager.io/v1
-kind: Issuer
+kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
-  namespace: podinfo
+  # namespace: podinfo
 spec:
   acme:
     # The ACME server URL
